# exocat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/worfklows/: publish.yml
ExoCat_Mass_Class/: ExoCat_mass_script.py
archive/ExoCat_Mass_Class/: ExoCat_mass_script.ipynb
data/: tepcat-all-26-06-2026.csv
docs/: api.rst  conf.py  index.rst  requirements.txt
src/: ml_tepcat.ipynb  read_tepcat.py  temperature.py
src/exocat/: __init__.py  density.py  mass.py  plots.py  read_tepcat_csv.py  temperature.py
tests/: test_readcsv.py  test_temperature.py
tests/end-to-end-tests/: test_main.py
